public/style.css
body {
    font-family: monospace;
}

.row {
    display: flex;
}

td,
th,
table {
    border: 1px solid black;
    border-collapse: collapse;
    padding: 5px;
    text-align: center;
}

td {
    font-size: large;
}

td:nth-child(5n) {
    border-right: 2px solid rgb(69, 69, 69);
}

tr:nth-child(5n) {
    border-bottom: 2px solid rgb(69, 69, 69);
}

/* td:nth-child(10n + 6),
td:nth-child(10n + 7),
td:nth-child(10n + 8),
td:nth-child(10n + 9),
td:nth-child(10n + 10) {
    background-color: lightgreen;
} */

table.blank,
td.blank {
    /* Same as background color, to keep the spacing right */
    border: 1px solid white;
}

td.player-position {
    position: relative;
    background-color: rgb(240, 240, 240);
}

td.player-position::after {
    content: "×";
    position: absolute;
    inset: -4px;
    border: 4px solid red;
    z-index: 1;
    pointer-events: none;

    /* Center the "×" */
    display: flex;
    align-items: center;
    justify-content: center;
}

td.player-position:not(.crossed)::after {
    content: "";
}

td.crossed::after {
    content: "×";
}

/* Focused row/column, but not the player position */
td.focused {
    background-color: rgb(240, 229, 229);
}

td.filled {
    background-color: rgb(69, 69, 69);
    box-shadow: inset 0 0 0 2px white;
}

table.line-number,
tr.line-number,
td.line-number {
    border: none;
}

td.line-number {
    font-size: medium;
    background-color: white;
}

.top-align {
    vertical-align: top;
    padding-top: 2px;
}

